--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.itemsDiv {
   display: flex;
-  flex-direction: column;
+}
+.itemCard {
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  /* height: 50rem; */
+  border-radius: 15px;
+  box-shadow: 0 2px 15px 0 rgb(0 0 0 / 13%);
+  background-color: #ffffff;
+}
+.itemCard p {
+  display: flex;
+  justify-content: center;
+}
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.imgContainer {
+  width: 200px;
+  height: 200px;
+  background-image: none;
+  border: solid #ccc 1px;
+  border-radius: 1rem;
+  overflow: hidden;
+  position: relative;
+  border-radius: 15px;
+  box-shadow: 0 2px 15px 0 rgb(0 0 0 / 13%);
+  background-color: #ffffff;
+  /* display: flex; */
+}
+.smallImgContainer {
+  width: 50px;
+  height: 50px;
+  background-image: none;
+
+  overflow: hidden;
+  position: relative;
+}
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.badge {
+  padding-left: 9px;
+  padding-right: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+}
+
+.label-warning[href],
+.badge-warning[href] {
+  background-color: #c67605;
+}
+#lblCartCount {
+  font-size: 12px;
+  background: #ff0000;
+  color: #fff;
+  padding: 0 5px;
+  vertical-align: top;
+  margin-left: -10px;
+}
+.modal {
+  display: flex; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+.popupContent {
+  /* display: flex; */
+  background: white;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50%;
+  height: fit-content;
+}
+form div {
+  padding: 0.5rem;
+}
+.close {
+  display: none;
+}
+h2 {
+  display: flex;
+  justify-content: space-between;
+}
+h2 p {
+  font-size: 1.5rem;
+  height: fit-content;
+  margin: 0px;
+  cursor: pointer;
+}
+.formButton {
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem;
+}
+.statsDiv {
+  display: flex;
+  justify-content: space-around;
+}
+a {
+  color: rgba(0, 0, 0, 0.561);
+  font-size: large;
+}
+.btn {
+  margin: 0.5rem;
+  display: flex;
+  margin-inline: auto;
+}
+.cartItems {
+  display: flex;
+  flex-direction: column;
+
+  /* background-color: #007bff; */
+  background-color: #bbc3c7;
+
+  width: fit-content;
+  align-items: flex-end;
+  margin-right: 15%;
+  width: 15rem;
+  align-items: center;
+  position: absolute;
+  margin-left: 90%;
+  z-index: 1000;
 }
 
-.App-link {
-  color: #61dafb;
+.cartItemsDiv {
+  display: flex;
+  justify-content: flex-end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homePageDiv {
+  display: flex;
+  justify-content: center;
 }
